# floaty

./: .gitignore  CLAUDE.md  README.md  generate-icons.md  package-lock.json  package.json  vitest.config.ts
.claude/: settings.json
.claude/agents/: tauri-fullstack-reviewer.md
.claude/commands/: add-command.md  add-component.md  check.md  code-review.md  tauri-dev.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  manager.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs  tray.rs
src-tauri/src/commands/: mod.rs  notes.rs  windows.rs
src-tauri/src/db/: mod.rs  notes.rs
src/__mocks__/@tauri-apps/: api.ts
src/components/: ErrorBoundary.tsx
src/components/NoteEditor/: NoteEditor.module.css  NoteEditor.tsx
src/components/NoteToolbar/: NoteToolbar.module.css  NoteToolbar.tsx
src/components/TitleBar/: TitleBar.module.css  TitleBar.tsx
src/pages/: ManagerWindow.module.css  ManagerWindow.tsx  NoteWindow.tsx
src/types/: note.ts
